force-app/main/default/objects/Sweets_Sold__c/Sweets_Sold__c.object-meta.xml
<CustomObject>
    <label>Sweets Sold</label>
    <nameField>
        <label>Sweet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sweets Sold</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>