force-app/main/default/objects/Sweets_Sold__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sweets Sold</relationshipLabel>
    <relationshipName>Sweets_Sold</relationshipName>
    <type>Lookup</type>
</CustomField>