force-app/main/default/objects/Sweets_Sold__c/fields/Fat_Free_Field__c.field-meta.xml
<CustomField>
    <fullName>Fat_Free_Field__c</fullName>
    <label>Fat Free Field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>