force-app/main/default/objects/Sweets_Sold__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sweets Sold</relationshipLabel>
    <relationshipName>Sweets_Sold</relationshipName>
    <type>Lookup</type>
</CustomField>