force-app/main/default/objects/Sweets_Sold__c/recordTypes/Fat_Free_Sweets.recordType-meta.xml
<RecordType>
    <fullName>Fat_Free_Sweets</fullName>
    <active>true</active>
    <label>Fat Free Sweets</label>
</RecordType>