force-app/main/default/objects/Sweets_Sold__c/recordTypes/Fat_Sweets.recordType-meta.xml
<RecordType>
    <fullName>Fat_Sweets</fullName>
    <active>true</active>
    <label>Fat Sweets</label>
</RecordType>